--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A portal for connecting Researchers with voleenters\u001b[D\u001b[D\u001b[D\u001b[D\u001bu\u001b[C\u001b[C\u001b[\u001b[\u001b[C\u001b[C\u001b[C\u001b[unteers",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch":"nodemon ./app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   "homepage": "https://github.com/Delhi-Hacksteam/ResearchHub#readme",
   "dependencies": {
     "ejs": "^3.1.5",
-    "express-session": "^1.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "nodemon": "^2.0.4"
   }
 }
