--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/Delhi-Hacksteam/ResearchHub#readme",
   "dependencies": {
+    "cookie-session": "^1.4.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.1"
+    "express-session": "^1.17.1",
+    "mongoose": "^5.10.3",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0"
   }
 }
