--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.10.3",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0",
-    "nodemon": "^2.0.4"
+    "passport-google-oauth": "^2.0.0"
   }
 }
